# mini-morello

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: deploy-reports.yml  rust.yml
benches/: dp.rs
reports/: index.html
reports/1-serial-vs-parallel/DP/parallel/10/: index.html
reports/1-serial-vs-parallel/DP/serial/10/: index.html
reports/2-optimum-bsize/: index.html
reports/2-optimum-bsize/DP/: index.html
reports/2-optimum-bsize/DP/parallel/: index.html
reports/2-optimum-bsize/DP/parallel/10/: index.html
reports/2-optimum-bsize/DP/parallel/20/: index.html
reports/2-optimum-bsize/DP/parallel/30/: index.html
reports/3-data-locality/: index.html
reports/3-data-locality/DP/: index.html
reports/3-data-locality/DP/10/: index.html
reports/3-data-locality/DP/x -_ y -_ z/10/: index.html
reports/3-data-locality/DP/x -_ z -_ y/10/: index.html
reports/3-data-locality/DP/y -_ x -_ z/10/: index.html
reports/3-data-locality/DP/y -_ z -_ x/10/: index.html
reports/3-data-locality/DP/z -_ x -_ y/10/: index.html
reports/3-data-locality/DP/z -_ y -_ x/10/: index.html
reports/4-on-attu7/: index.html
reports/4-on-attu7/DP/: index.html
reports/4-serial-vs-parallel-on-attu7/: index.html
reports/4-serial-vs-parallel-on-attu7/DP/: index.html
reports/4-serial-vs-parallel-on-attu7/DP/10/: index.html
src/: cost.rs  dp.rs  dp_table.rs  dtypes.rs  impl.rs  lib.rs  spec.rs  specs.rs  tensor.rs  tiling.rs  util.rs
src/impl/: actions.rs  matmuls.rs  utils.rs
src/search/: dp.rs
src/specs/: tensor_spec.rs
(+3 files in other folders)
