[package]
name = "morello-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
debug_print = "1.0.0"
threadpool = "1.8.1"

# The bench profile inherits the settings from the release profile.
# https://doc.rust-lang.org/cargo/reference/profiles.html#bench
[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
